--- a/email-sender-app/frontend/package.json
+++ b/email-sender-app/frontend/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
+    "csv-parser": "^3.0.0",
+    "groq-sdk": "^0.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
