--- a/email-sender-app/frontend/package.json
+++ b/email-sender-app/frontend/package.json
@@ -10,6 +10,7 @@
     "buffer": "^6.0.3",
     "csv-parser": "^3.0.0",
     "groq-sdk": "^0.8.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
