--- a/email-sender-app/frontend/package.json
+++ b/email-sender-app/frontend/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.6",
     "csv-parser": "^3.0.0",
     "groq-sdk": "^0.8.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "stream": "^0.0.3",
