--- a/email-sender-app/backend/.env
+++ b/email-sender-app/backend/.env
@@ -4,6 +4,9 @@ EMAIL_USER="deepblueproject9@gmail.com"
 EMAIL_PASS="slcq luip kqpd onvm"
 GROQ_API_KEY="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"
 MONGODB_URI=mongodb://localhost:27017/emailSender
-MAILGUN_API_KEY="3afdf19df837b6010f3b80aea888763d-79295dd0-90f55c8b"
+# MAILGUN_API_KEY="3afdf19df837b6010f3b80aea888763d-79295dd0-90f55c8b"
+MAILGUN_API_KEY="269cae5b522a76c091d8eab80b1d7f52-79295dd0-1b392cca"
 MAILGUN_DOMAIN="sandboxb0efc171922f4625b914964fdb4e9058.mailgun.org"
 MAILGUN_FROM="deepblueproject9@gmail.com"
+
+SMTP_PASS = "c39a05e6978d2af2d4805c4f1cce1aee-79295dd0-4ff4d662"
