--- a/email-sender-app/backend/.env
+++ b/email-sender-app/backend/.env
@@ -1,7 +1,7 @@
 # backend/.env
 PORT=5000
 EMAIL_USER="deepblueproject9@gmail.com"
-EMAIL_PASS="slcq luip kqpd onvm"
+EMAIL_PASS="oipp ftyc jccs bxiu"
 GROQ_API_KEY="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"
 MONGODB_URI=mongodb://localhost:27017/emailSender
 # MAILGUN_API_KEY="3afdf19df837b6010f3b80aea888763d-79295dd0-90f55c8b"
